5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1679_1105.log
== SUBMITION (2019-05-02 08:38:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.173341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 11, in <module>
    elif (brasao == dragao):
NameError: name 'dragao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:38:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    elif (brasao == dragao):
NameError: name 'dragao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.202913
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 11, in <module>
    elif (brasao == dragao):
NameError: name 'dragao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.213501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 11, in <module>
    elif (brasao == dragao):
NameError: name 'dragao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.325671
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 11, in <module>
    elif (brasao == dragao):
NameError: name 'dragao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.418562
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 11, in <module>
    elif (brasao == dragao):
NameError: name 'dragao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.438735
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 11, in <module>
    elif (brasao == dragao):
NameError: name 'dragao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.26725
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1679/1105/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.310813
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 11, in <module>
    elif (brasao == dragao):
NameError: name 'dragao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.471085
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 11, in <module>
    elif (brasao == dragao):
NameError: name 'dragao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.435647
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1679/1105/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.403122
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 11, in <module>
    elif (brasao == dragao):
NameError: name 'dragao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.376899
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1679/1105/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.370134
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 11, in <module>
    elif (brasao == dragao):
NameError: name 'dragao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.439591
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 11, in <module>
    elif (brasao == dragao):
NameError: name 'dragao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.474966
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1679/1105/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.414509
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 11, in <module>
    elif (brasao == dragao):
NameError: name 'dragao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.428538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 11, in <module>
    elif (brasao == dragao):
NameError: name 'dragao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:38:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.307991
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1679/1105/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:40:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:40:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("Descricao do brasao: ")
print("Entrada: ", brasao)
if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.173655
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
